--- a/index.html
+++ b/index.html
@@ -7,36 +7,38 @@
     <title>Calculator</title>
   </head>
   <body>
+    <h1>Charlie's Calculator</h1>
     <div class="calculator">
       <div class="row">
-        <div class="display">0</div>
+        <div id="display" class="display">0</div>
       </div>
       <div class="row">
-        <button class="clear">Clear</button>
-        <button>÷</button>
+        <button id="clear">Clear</button>
+        <button id="divide" class="operator">÷</button>
       </div>
       <div class="row">
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>×</button>
+        <button class="digit" id="7">7</button>
+        <button class="digit" id="8">8</button>
+        <button class="digit" id="9">9</button>
+        <button id="multiply" class="operator">×</button>
       </div>
       <div class="row">
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>−</button>
+        <button class="digit" id="4">4</button>
+        <button class="digit" id="5">5</button>
+        <button class="digit" id="6">6</button>
+        <button id="subtract" class="operator">−</button>
       </div>
       <div class="row">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>+</button>
+        <button class="digit" id="1">1</button>
+        <button class="digit" id="2">2</button>
+        <button class="digit" id="3">3</button>
+        <button id="add" class="operator">+</button>
       </div>
       <div class="row">
-        <button>0</button>
-        <button>=</button>
+        <button class="digit zero" id="0">0</button>
+        <button id="equals">=</button>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
